一些较大的改动, 以及提高最低 JAVA 版本至 17.